Fix spacing of 'or' in don't know checkbox on mobile

--- a/src/sass/phone.scss
+++ b/src/sass/phone.scss
@@ -300,10 +300,7 @@
     .daterange {
       .from-present {
         display: block;
-
-        .or {
-          margin: 0;
-        }
+        margin-right: 1rem;
       }
     }
 
